--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             <div class="timeline-panel">
               <div class="timeline-heading">
                 <h4>白城师范学院</h4>
-                <h4 class="subheading">音乐学</h4>
+                <!-- <h4 class="subheading">音乐学</h4> -->
               </div>
               <div class="timeline-body">
                 <p>大学教育的最终目的不是教会你受益一生的知识，而是让你成为终生学习者，面临新问题自己学习自己解决。因热爱互联网，大学期间几乎天天跑图书馆，通过课余时间便自学了Web前端，更多时间是去网上找视频教程，一步一步摸索与学习。</p>
