--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         <h4>CSS3</h4>
       </div>
       <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="65"> <span class="percent">65</span> </span>
-        <h4>AJAX</h4>
+        <h4>VUE</h4>
       </div>
     </div>
   </div>
@@ -308,9 +308,25 @@
         <ul class="timeline">
           <li>
             <div class="timeline-image">
+              <h4>至今 <br>
+                ——<br>
+                04/2017</h4>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>软通动力信息技术有限公司</h4>
+                <h4 class="subheading">前端开发工程师（外派百度金融）</h4>
+              </div>
+              <div class="timeline-body">
+                <p>运用Vue、JS、JQ、Json、Less等前端技术实现app的开发。根据不同用户的手机进行调试，兼容Android手机和ios手机。</p>
+              </div>
+            </div>
+          </li>
+          <li class="timeline-inverted">
+            <div class="timeline-image">
               <h4>02/2017 <br>
                 ——<br>
-                07/2016</h4>
+                07/2016 </h4>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
@@ -319,22 +335,6 @@
               </div>
               <div class="timeline-body">
                 <p>运用div+css、JS、JQ、Ajax、BootStrap等前端技术实现公司官网的维护以及bug修复。根据设计师的的效果图制作界面功能，兼容主流浏览器。</p>
-              </div>
-            </div>
-          </li>
-          <li class="timeline-inverted">
-            <div class="timeline-image">
-              <h4>09/2015 <br>
-                ——<br>
-                05/s2016 </h4>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>馨锦菏装饰工程有限公司</h4>
-                <h4 class="subheading">前端开发工程师&工程项目演讲负责人</h4>
-              </div>
-              <div class="timeline-body">
-                <p>主要负责装饰工程项目投标时的演讲工作。根据甲方公司的要求实现Web页面的开发。利用相关前端技术进行前端效果的实现（交互、动画）。</p>
               </div>
             </div>
           </li>
